test/error/s_slotlimit.lua
hstructure S
s0:object
s1:object
s2:object
s3:object
s4:object
s5:object
s6:object
s7:object
s8:object
s9:object
s10:object
s11:object
s12:object
s13:object
s14:object
s15:object
s16:object
s17:object
s18:object
s19:object
s20:object
s21:object
s22:object
s23:object
s24:object
s25:object
s26:object
s27:object
s28:object
s29:object
s30:object
s31:object
s32:object
s33:object
s34:object
s35:object
s36:object
s37:object
s38:object
s39:object
s40:object
s41:object
s42:object
s43:object
s44:object
s45:object
s46:object
s47:object
s48:object
s49:object
s50:object
s51:object
s52:object
s53:object
s54:object
s55:object
s56:object
s57:object
s58:object
s59:object
s60:object
s61:object
s62:object
s63:object
s64:object
s65:object
s66:object
s67:object
s68:object
s69:object
s70:object
s71:object
s72:object
s73:object
s74:object
s75:object
s76:object
s77:object
s78:object
s79:object
s80:object
s81:object
s82:object
s83:object
s84:object
s85:object
s86:object
s87:object
s88:object
s89:object
s90:object
s91:object
s92:object
s93:object
s94:object
s95:object
s96:object
s97:object
s98:object
s99:object
s100:object
s101:object
s102:object
s103:object
s104:object
s105:object
s106:object
s107:object
s108:object
s109:object
s110:object
s111:object
s112:object
s113:object
s114:object
s115:object
s116:object
s117:object
s118:object
s119:object
s120:object
s121:object
s122:object
s123:object
s124:object
s125:object
s126:object
s127:object
s128:object
s129:object
s130:object
s131:object
s132:object
s133:object
s134:object
s135:object
s136:object
s137:object
s138:object
s139:object
s140:object
s141:object
s142:object
s143:object
s144:object
s145:object
s146:object
s147:object
s148:object
s149:object
s150:object
s151:object
s152:object
s153:object
s154:object
s155:object
s156:object
s157:object
s158:object
s159:object
s160:object
s161:object
s162:object
s163:object
s164:object
s165:object
s166:object
s167:object
s168:object
s169:object
s170:object
s171:object
s172:object
s173:object
s174:object
s175:object
s176:object
s177:object
s178:object
s179:object
s180:object
s181:object
s182:object
s183:object
s184:object
s185:object
s186:object
s187:object
s188:object
s189:object
s190:object
s191:object
s192:object
s193:object
s194:object
s195:object
s196:object
s197:object
s198:object
s199:object
s200:object
s201:object
s202:object
s203:object
s204:object
s205:object
s206:object
s207:object
s208:object
s209:object
s210:object
s211:object
s212:object
s213:object
s214:object
s215:object
s216:object
s217:object
s218:object
s219:object
s220:object
s221:object
s222:object
s223:object
end
